# Spot-MuJoCo-ROS2

./: README.md
communication/: CMakeLists.txt  package.xml
communication/msg/: ActuatorCmds.msg  MotionCommands.msg  TouchSensor.msg
communication/srv/: GaitSwitch.srv  SimulationReset.srv
core/: CMakeLists.txt  package.xml
core/cmake/: deepbreak_cxx_flags.cmake  pinocchio_config.cmake
core/include/core/: Types.h
core/include/core/misc/: Benchmark.h  Buffer.h  LinearAlgebra.h  LoadData.h  Lookup.h  NumericTraits.h  Numerics.h
core/src/: Types.cpp
core/src/misc/: LinearAlgebra.cpp
description/: CMakeLists.txt  package.xml
description/model/urdf/spot_mini/: model.urdf
description/model/urdf/spot_mini/meshes/: my_world.world
description/model/xml/spot_mini/: spot_mini.xml
simulation/mujoco/: CMakeLists.txt  package.xml
simulation/mujoco/include/: MuJoCoMessageHandler.h  simulate.h
simulation/mujoco/launch/: simulation_launch.py
simulation/mujoco/src/: MuJoCoMessageHandler.cpp  main.cc  simulate.cc
